--- a/Notes.Web/Resources/Views.UploadFiles.Details.ja.resx
+++ b/Notes.Web/Resources/Views.UploadFiles.Details.ja.resx
@@ -120,4 +120,10 @@
   <data name="Details upload file" xml:space="preserve">
     <value>ファイル詳細</value>
   </data>
+  <data name="Download" xml:space="preserve">
+    <value>ダウンロード</value>
+  </data>
+  <data name="{0} bytes" xml:space="preserve">
+    <value>{0} バイト</value>
+  </data>
 </root>
