--- a/Notes.Web/Resources/Startup.ja.resx
+++ b/Notes.Web/Resources/Startup.ja.resx
@@ -129,4 +129,10 @@
   <data name="File Size" xml:space="preserve">
     <value>ファイルサイズ</value>
   </data>
+  <data name="The {0} field is required." xml:space="preserve">
+    <value>{0}は必須項目です。</value>
+  </data>
+  <data name="The {0} field is using illegal characters." xml:space="preserve">
+    <value>{0}に不正な文字が使用されています。</value>
+  </data>
 </root>
