--- a/Notes.Web/Resources/Startup.ja.resx
+++ b/Notes.Web/Resources/Startup.ja.resx
@@ -129,6 +129,9 @@
   <data name="File Size" xml:space="preserve">
     <value>ファイルサイズ</value>
   </data>
+  <data name="Hash Value" xml:space="preserve">
+    <value>ハッシュ値</value>
+  </data>
   <data name="The {0} field is required." xml:space="preserve">
     <value>{0}は必須項目です。</value>
   </data>
